--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open --port 4000 --host",
+    "dev": "vite --open --port 3000 --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,6 +13,7 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "react-icons": "^4.9.0"
   }
 }
